Fix leaderboard overflow

--- a/styles.css
+++ b/styles.css
@@ -238,7 +238,7 @@ main {
 
 p1 {
     color:white;
-    font-size: small;
+    font-size: x-small;
 }
 
 #discord_qr {
